# Trashpilegame

./: .gitignore  CORRECTED_SCORING_SYSTEM.md  CRITICAL_BLOCKERS_COMPLETE.md  DYNAMIC_PROGRESSION_SYSTEM.md  FULL_SYSTEM_QA_REPORT.md  GCMSState_INTEGRATION_FIX.kt  LEVELING_VERIFICATION_RESULTS.md  LEVEL_1_200_PROGRESSION_DATA.md  PROJECT_TREE.txt  QUALITY_ASSURANCE_REPORT.md  README.md  SKILL_ABILITY_IMPLEMENTATION_SUMMARY.md  SKILL_ABILITY_QUICK_REFERENCE.md  TIERED_PROGRESSION_SPECIFICATION.md  UNLIMITED_LEVELING_COMPLETION_REPORT.md  build-and-test.sh  gradle.properties  gradlew  install-debug.sh  quick-build.sh  settings.gradle.kts  verify_leveling.py
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/audio/: audio_wrapper.cpp  audio_wrapper.h
app/src/main/cpp/game_engine/: game_engine_wrapper.cpp  game_engine_wrapper.h
app/src/main/cpp/jni/: audio_jni.cpp  game_engine_jni.cpp  jni_bridge.cpp  renderer_jni.cpp
app/src/main/cpp/renderer/: renderer_wrapper.cpp  renderer_wrapper.h
app/src/main/java/com/trashpiles/: TrashPilesApplication.kt
app/src/main/java/com/trashpiles/data/models/: Card.kt  GameState.kt  Player.kt
app/src/main/java/com/trashpiles/game/: GameAudio.kt  GameFlowController.kt  GameRenderer.kt  SmileyFaceController.kt
app/src/main/java/com/trashpiles/gcms/: ChallengeIntegration.kt  ChallengeSystem.kt  DeckBuilder.kt  GCMSCommand.kt  GCMSController.kt  GCMSControllerRefactored.kt  GCMSEvent.kt  GCMSState.kt  GCMSStateWithSkillEffects.kt  GCMSValidator.kt  GameRules.kt  SkillAbilityDatabase.kt  SkillAbilityEffectProcessor.kt  SkillAbilityLogic.kt  SkillAbilitySystem.kt  SkillAbilitySystemUpdated.kt  TrophySystem.kt
app/src/main/java/com/trashpiles/gcms/handlers/: CardCommandHandler.kt  ChallengeCommandHandler.kt  CommandHandler.kt  MatchCommandHandler.kt  SkillCommandHandler.kt  TurnCommandHandler.kt
app/src/main/java/com/trashpiles/native/: AudioEngineBridge.kt  GameEngineBridge.kt  NativeEngineWrapper.kt  RendererBridge.kt
app/src/main/java/com/trashpiles/presentation/: GameActivity.kt  MainActivity.kt
app/src/main/java/com/trashpiles/presentation/components/: SmileyFaceView.kt
app/src/main/java/com/trashpiles/presentation/navigation/: NavGraph.kt  Screen.kt
app/src/main/java/com/trashpiles/presentation/screens/game/: GameScreen.kt
app/src/main/java/com/trashpiles/presentation/screens/home/: HomeScreen.kt
app/src/main/java/com/trashpiles/presentation/screens/rules/: RulesScreen.kt
app/src/main/java/com/trashpiles/presentation/screens/settings/: SettingsScreen.kt
app/src/main/java/com/trashpiles/presentation/screens/stats/: StatsScreen.kt
app/src/main/java/com/trashpiles/presentation/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/trashpiles/utils/: AssetLoader.kt  AssetPaths.kt
app/src/main/res/drawable/: card_back.xml  player_background.xml
app/src/main/res/layout/: activity_game.xml  activity_game_4player.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/trashpiles/: CriticalBlockersIntegrationTest.kt
app/src/test/java/com/trashpiles/gcms/: ChallengeSystemTest.kt  DeckBuilderTest.kt  DynamicProgressionTest.kt  GCMSControllerRefactoredTest.kt  GCMSControllerTest.kt  GCMSIntegrationTest.kt  GCMSStateTest.kt  GCMSValidatorTest.kt  GameRulesTest.kt  MockEngineTest.kt  SkillAbilityDatabaseTest.kt  SkillAbilitySystemTest.kt  TrophySystemTest.kt
app/src/test/java/com/trashpiles/gcms/handlers/: CardCommandHandlerTest.kt  ChallengeCommandHandlerTest.kt  MatchCommandHandlerTest.kt  TurnCommandHandlerTest.kt
docs/: how_to_play_trash_piles.md
documentation/: ANDROID_STUDIO_GUIDE.md  CHALLENGE_SYSTEM_IMPLEMENTATION.md  CHALLENGE_SYSTEM_INTEGRATION_COMPLETE.md  COMPLETE_PROJECT_REPORT.md  CONTROLLER_REFACTORING_GUIDE.md  CRITICAL_ISSUES_ACTION_PLAN.md  DYNAMIC_PROGRESSION_IMPLEMENTATION.md  INTEGRATION_GUIDE.md  LEVELING_PROGRESSION_DIAGRAM.md  LEVELING_SYSTEM_IMPLEMENTATION.md  LEVELING_SYSTEM_UPDATE_SUMMARY.md  PROJECT_REORGANIZATION_PLAN.md  QA_CHECKLIST_TEMPLATE.md  QUICK_START.md  REFACTORING_COMPLETE_SUMMARY.md  SKILLS_ABILITIES_COMPLETE_IMPLEMENTATION.md  SKILLS_ABILITIES_FINAL_SUMMARY.md  SKILLS_ABILITIES_QUICK_REFERENCE.md  SKILL_ABILITY_ARCHITECTURE.md  SKILL_ABILITY_FULL_SPECIFICATION.md  STRUCTURE_SUMMARY.md  TROPHY_SYSTEM_IMPLEMENTATION.md  UI_LAYOUT_DESIGN.md  UNLIMITED_LEVELING_QUICK_REFERENCE.md  UNLIMITED_LEVELING_SYSTEM.md  todo.md
